--- a/styles.css
+++ b/styles.css
@@ -1,145 +1,255 @@
-*{
-	margin: 0;
-	padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-
-#homepage{
-	height:100vh;
-	background: url(./public/pics/background.jpg);
-	background-size: cover;
-	color:white;
-	text-align: center
+#homepage {
+    height: 100vh;
+    background: url(./public/pics/background.jpg);
+    background-size: cover;
+    color: white;
+    text-align: center
 }
 
-h1{
-	margin: 0px 0 0 0;
-	padding-top: 15%;
-	font-size:40px;
-	text-shadow: 2px 2px black;
-
-
-
+h1 {
+    margin: 0px 0 0 0;
+    padding-top: 15%;
+    font-size: 60px;
+    text-shadow: 2px 2px black;
 }
 
-#homepage p{
-	margin: 40px;
-	font-size:20px;
-	text-shadow: 2px 2px black;
-
-
-
+#homepage p {
+    margin: 40px;
+    font-size: 30px;
+    text-shadow: 2px 2px black;
 }
-#homepage button{
-	width: 120px;
-	height:50px;
-	border-radius: 5px; 
-	font-size: 20px;
-	border: 0;
-	background-color: #FFBF00;
-	margin-top: 20px; 
-	color: black;
+
+#homepage button {
+    width: 120px;
+    height: 50px;
+    border-radius: 5px;
+    font-size: 20px;
+    border: 0;
+    background-color: #FFBF00;
+    margin-top: 20px;
+    color: black;
     box-shadow: 2px 2px 1px black;
+}
+
+#lessonFlow {
+    height: 100vh;
+    text-align: center;
+    padding-top: 60px;
+    font-size: 40px;
+}
+
+#lessonFlow h2{
+font-size: 60px;
+color:#FF9800;
+margin-bottom: -50px;
+    text-shadow: 2px 2px black;
 
 
 }
 
-#lessonFlow{
-	height:100vh;
-	text-align: center;
-/*	background: url(overlay-vignette.png);
-*/	padding-top:60px;
-	font-size: 40px;
+#factPic,
+#errorPic,
+#doPic {
+    width: 300px;
+    height: 300px;
+    border-radius: 30%;
 }
 
-#factPic, #errorPic, #doPic{
-	width:300px;
-	height: 300px;
-	margin-top: 100px;
-	margin-right: 30px;
-	margin-left: 30px;
-	border-radius: 30%;
-	box-shadow: 10px 10px 5px #888888;
-
-
+#slogan .col-md-4:last-child {
+    margin-left: -15px;
 }
-#factsPage{
-	height:100vh;
-	text-align: center;
-	background: url(http://img00.deviantart.net/5396/i/2013/016/e/3/high_quality_free_background_old_wall_by_ugurbektas-d5ro8nd.jpg);
-	background:url(http://www.freecreatives.com/wp-content/uploads/2015/03/unique-brick-wall-design-in-brick-wall-texture-it-is-a-high-resolution-brick-wall-background.jpg);
-	padding-top:60px;
-}
+
 
 /* entire container, keeps perspective */
-.flip-container {
-	perspective: 1000;
-	margin: 0 auto;
-	margin-top: 60px;
-	
 
+#lessonFlow .flip-container {
+    perspective: 1000;
+    margin: 0 auto;
+    margin-top: 60px;
 }
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
 
-.flip-container, .front, .back {
-	width: 960px;
-	height: 480px;
 
-	background: url(./public/pics/Seamless-Polygon-Backgrounds-Vol2-full_Kfb2t3Q.jpg);
-/*	background: url(http://www.planwallpaper.com/static/images/persona_4_background_pattern_by_darkarddeidara-d6nqz2h.png);
-*/	background-size: cover;
-	color: white;
-    box-shadow: 10px 10px 5px black;
+/* flip the pane when hovered */
 
+#lessonFlow .flip-container:hover .flipper,
+#lessonFlow .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+#lessonFlow .flip-container,
+#lessonFlow .front,
+#lessonFlow .back {
+	margin-top: 80px;
+    width: 300px;
+    height: 300px;
+    border-radius: 30%;
+}
+
+#lessonFlow .front,
+#lessonFlow .back {
+    color: black;
+    box-shadow: 10px 10px 5px #888888;
+}
+
+#lessonFlow .back p {
+    padding-top: 90px;
+    font-size: 20px;
+    color: green;
 }
 
 
 /* flip speed goes here */
-.flipper {
-		padding-top: 5%;
 
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
-	position: relative;
+#lessonFlow .flipper {
+    padding-top: 5%;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
 }
+
 
 /* hide back of pane during swap */
-.front, .back {
-	backface-visibility: hidden;
 
-	position: absolute;
-	top: 0;
-	left: 0;
+#lessonFlow .front,
+#lessonFlow .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+
 
 /* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
+
+#lessonFlow .front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
 }
 
-.front h2{
-
-margin-top: 60px;
-font-size:40px;
-
+#lessonFlow .front h2 {
+    margin-top: 60px;
+    font-size: 40px;
 }
+
+#slogan {
+	margin-top: 100px;
+    color: #A7FFEB;
+    text-shadow: 2px 2px black;
+}
+
+
 /* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
+
+#lessonFlow .back {
+    transform: rotateY(180deg);
+}
+
+#lessonFlow .flip-container:first-child {
+    margin-left: -50px;
+    margin-right: 60px;
+}
+
+#lessonFlow .flip-container:nth-child(even) {
+    margin-left: 100px;
+    margin-right: 60px;
+}
+
+#lessonFlow .flip-container:last-child {
+    margin-left: 100px;
+}
+
+#factsPage {
+    height: 100vh;
+    text-align: center;
+    background: url(http://img00.deviantart.net/5396/i/2013/016/e/3/high_quality_free_background_old_wall_by_ugurbektas-d5ro8nd.jpg);
+    background: url(http://www.freecreatives.com/wp-content/uploads/2015/03/unique-brick-wall-design-in-brick-wall-texture-it-is-a-high-resolution-brick-wall-background.jpg);
+    padding-top: 60px;
 }
 
 
-#errors{
-	height:100vh;
-	text-align: center;
-	background: url(https://farm4.staticflickr.com/3795/9427830022_19ebb7e802_o_d.jpg);
-	padding-top:60px;
-	color:black;
-	background-size: cover;
+/* entire container, keeps perspective */
+
+#factsPage .flip-container {
+    perspective: 1000;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+
+
+/* flip the pane when hovered */
+
+#factsPage .flip-container:hover .flipper,
+#factsPage .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+#factsPage .flip-container,
+#factsPage .front,
+#factsPage .back {
+
+    width: 960px;
+    height: 480px;
+    background: url(./public/pics/Seamless-Polygon-Backgrounds-Vol2-full_Kfb2t3Q.jpg);
+    /*	background: url(http://www.planwallpaper.com/static/images/persona_4_background_pattern_by_darkarddeidara-d6nqz2h.png);
+*/
+    background-size: cover;
+    color: white;
+    box-shadow: 10px 10px 5px black;
+}
+
+
+/* flip speed goes here */
+
+#factsPage .flipper {
+    padding-top: 5%;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+
+/* hide back of pane during swap */
+
+#factsPage .front,
+#factsPage .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+/* front pane, placed above back */
+
+#factsPage .front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+#factsPage .front h2 {
+    margin-top: 60px;
+    font-size: 40px;
+}
+
+
+/* back, initially hidden pane */
+
+#factsPage .back {
+    transform: rotateY(180deg);
+}
+
+#errors {
+    height: 100vh;
+    text-align: center;
+    background: url(https://farm4.staticflickr.com/3795/9427830022_19ebb7e802_o_d.jpg);
+    padding-top: 60px;
+    color: black;
+    background-size: cover;
 }
