--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,23 @@
     padding: 0;
 }
 
+ul
+{
+    list-style-type: none;
+    text-align: left;
+    font-size: 20px;
+    padding-left: 100px;
+    margin-top: 30px;
+
+}
+
+ol, ul {
+    margin-top: 100px;
+    margin-bottom: 10px;
+}
+
+
+
 #homepage {
     height: 100vh;
     background: url(./public/pics/background.jpg);
@@ -55,8 +72,8 @@ margin-bottom: -50px;
 #factPic,
 #errorPic,
 #doPic {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     border-radius: 30%;
 }
 
@@ -175,6 +192,7 @@ margin-bottom: -50px;
     background: url(https://farm4.staticflickr.com/3795/9427830022_19ebb7e802_o_d.jpg);
 
     padding-top: 60px;
+    position: relative;
 }
 
 #examplesPage h2{
@@ -200,43 +218,54 @@ margin-bottom: -50px;
     border-width: 0;
 } 
 
-#examplesTable{
-        margin: 0 auto;
-        border-collapse: collapse;
-        font-size: 40px;
-        margin-top: 150px;
-}
 
-/*
-#factsTable, #factsTable th, #factsTable td {
-    border: 1px solid black;
-}*/
-
-#examplesTable th{
-
-        width: 200px;
+#examplePic img{
+    height: 400px;
+    width: 500px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        margin-top: 50px;
 
 }
 
-#examplesTable #EnglishTranslation{
-            text-align: left;
+#exampleTable{
+ height: 400px;
+    width: 500px;
+border-style:none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
+    margin-left: 20px;
+
 }
 
-#examplesTable [colspan="4"]{
-          padding-left: 40px;
+#exampleTable{
+    font-size: 20px;
+    margin-top: 50px;
 }
 
-#examplesTable .structurePlace{
-        width: 180px;
+#exampleTable th{
+    padding-left: 40px;
 }
-#examplesTable .structureProposition{
-        width: 300px;
+
+
+#exampleTable .structureThings{
+        padding-right: 40px;
+        color:blue;
+
 }
-#factsTable .structureYou{
-        width: 150px;
+
+#exampleTable .structureYou{
+        color:red;
+
 }
-#examplesTable .structureThings{
-        width: 300px;
+
+#exampleTable .structureProposition{
+        color:green;
+
+}
+
+#exampleTable .structurePlace{
+        color:brown;
+
 }
 
 [disabled=disabled]{
@@ -244,6 +273,106 @@ margin-bottom: -50px;
     background-color: #c4c2c2;
     box-shadow:none; 
 }
+
+#examplesPage .assessment h3 {
+/*position: absolute;
+*/  bottom: 0px;
+  margin: 0 auto;
+  margin-top: 50px; 
+font-size: 40px;
+}
+
+#examplesPage .assessment span{
+        text-align: left;
+    color:#FF9800;
+    text-shadow: 2px 2px black;
+}
+
+
+
+#examplesPage p{
+    color:#FF9800;
+    text-shadow: 2px 2px black;
+    font-size: 30px;
+}
+
+#examplesPage h4{
+    margin-top: 30px;
+    margin-bottom: 70px;
+    font-size:22px;
+}
+
+#sortStructurePad{
+margin-top: 0px;
+    height:290px;
+    margin-left: 50px;
+background-color: white;
+    margin-right: 50px;
+    border-radius: 30%;
+        box-shadow: 10px 10px 5px #888888;
+
+
+}
+
+#sortStructure{
+    margin-top: 20px;
+    margin-left: 20px;
+
+}
+
+#catAssessmentPic{
+    height:290px;
+    width: 310px;
+    margin-left: 50px;
+    border-radius: 30%;
+    box-shadow: 10px 10px 5px #888888;
+
+}
+
+#Catvocabulary{
+    margin-right: 50px;
+    margin-left: 50px;
+    height:290px;
+    background-color: white;
+    border-radius: 30%;
+
+    box-shadow: 10px 10px 5px #888888;
+
+
+}
+
+
+
+#examplesPage #sortStructure{
+
+margin-right: 50px;
+
+
+}
+
+#examplesPage #sortStructure ol {
+    list-style-type: none;
+    position: relative;
+}
+
+
+#examplesPage #sortStructure ol li {
+    background: #eeeeee;
+    border-radius: 5px;
+    border: 1px solid black;
+    margin: 3px;
+    padding: 0.4em;
+    font-size: 1.3em;
+    height: 16px;
+    font-family: Verdana, Arial, Sans-Serif;
+    display:inline;
+}
+
+#examplesPage #sortStructure ol .ui-selected {
+    background: #F39814; color: white;
+
+}
+
 
 
 #errors {
@@ -260,6 +389,11 @@ margin-bottom: -50px;
     text-shadow: 2px 2px black;
 
 
+}
+
+
+#errors .row h2{
+    color:#FF5396
 }
 
 #errors img{
